@@ -5,10 +5,19 @@
  */
 
 / {
-	chosen {
-		seL4,kernel-devices =
-		    &{/soc/interrupt-controller@c000000};
-	};
+    chosen {
+        seL4,kernel-devices =
+            &{/soc/clint@2000000},
+            &{/soc/interrupt-controller@c000000};
+    };
+
+    /* The size and address of the CLINT is derived from the Rocketchip source code. */
+    soc {
+        clint@2000000 {
+            compatible = "riscv,cpu-intc";
+            reg = <0x2000000 0x10000>;
+        };
+    };
 
 	/delete-node/ memory@80000000;
 
